--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="wrapper">
 
             <div id="slider">
-                <img src="image/001.jpg">
-                <img src="image/002.jpg">
-                <img src="image/003.jpg">
-                <img src="image/004.jpg">
+                <img src="image/001.jpg" id='1'>
+                <img src="image/002.jpg" id='2'>
+                <img src="image/003.jpg" id='3'>
+                <img src="image/004.jpg" id='4'>
             </div>
 
             <a href="#" class="left">Previous</a>
@@ -23,6 +23,9 @@
 
         </div>
 
+
+    <script type="text/javascript" src="javas/jquery.js"></script>
+    <script type="text/javascript" src="javas/slider.js"></script>
     </body>
 
 </html>
