--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <img src="image/004.jpg" id='4'>
             </div>
 
-            <a href="#" class="left">Previous</a>
-            <a href="#" class="right">Next</a>
+            <a href="#" class="left" onclick="prev(); return fasle;">Previous</a>
+            <a href="#" class="right" onclick="next(); return false;">Next</a>
 
         </div>
 
